# signalgraph

./: .gitignore  AGENTS.md  LICENSE  README.ja.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: SPEC.md
src/signalgraph/: __init__.py  cli.py  codex_client.py  core.py  graph.py  mcp_server.py  models.py  tracks.py
tests/: helpers.py  test_cli_mcp.py  test_codex_client.py  test_graph.py  test_models.py  test_signalgraph.py
